<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/gradient_2">

       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:backgroundTint="@color/white"
           android:elevation="30dp"
           app:cardCornerRadius="10dp"
           android:layout_marginBottom="10dp"
           android:layout_height="match_parent">

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:orientation="vertical">

                  <TextView
                      android:id="@+id/verify_textview"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:fontFamily="@font/adamina"
                      android:text="@string/varification"
                      android:textColor="#251e3e"
                      android:lineHeight="53dp"
                      android:gravity="center"
                      android:padding="10dp"
                      android:textSize="34dp" />

                  <RelativeLayout
                      android:id="@+id/verifyCont"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_centerInParent="true"
                      android:padding="20dp">

                      <RelativeLayout
                          android:id="@+id/varifyForm"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_centerInParent="true">
                          <EditText
                              android:id="@+id/varification1"
                              android:layout_width="50dp"
                              android:layout_height="wrap_content"
                              android:layout_marginStart="5dp"
                              android:textColor="@color/black"
                              android:ems="10"
                              android:gravity="center"
                              android:inputType="phone"
                              android:textSize="20sp"
                              android:layout_marginEnd="1dp"/>
                          <EditText
                              android:id="@+id/varification2"
                              android:layout_width="50dp"
                              android:layout_height="wrap_content"
                              android:layout_toRightOf="@+id/varification1"
                              android:textColor="@color/black"
                              android:ems="10"
                              android:gravity="center"
                              android:inputType="phone"
                              android:textSize="20sp"
                              android:layout_marginEnd="1dp"/>
                          <EditText
                              android:id="@+id/varification3"
                              android:layout_width="50dp"
                              android:layout_height="wrap_content"
                              android:textColor="@color/black"
                              android:layout_toRightOf="@+id/varification2"
                              android:ems="10"
                              android:gravity="center"
                              android:inputType="phone"
                              android:textSize="20sp"
                              android:layout_marginEnd="1dp"/>
                          <EditText
                              android:id="@+id/varification4"
                              android:layout_width="50dp"
                              android:layout_height="wrap_content"
                              android:layout_toRightOf="@+id/varification3"
                              android:textColor="@color/black"
                              android:ems="10"
                              android:gravity="center"
                              android:inputType="phone"
                              android:textSize="20sp"
                              android:layout_marginEnd="1dp"/>
                          <EditText
                              android:id="@+id/varification5"
                              android:layout_width="50dp"
                              android:layout_height="wrap_content"
                              android:textColor="@color/black"
                              android:layout_toRightOf="@+id/varification4"
                              android:ems="10"
                              android:gravity="center"
                              android:inputType="phone"
                              android:textSize="20sp"
                              android:layout_marginEnd="1dp"/>
                          <EditText
                              android:id="@+id/varification6"
                              android:layout_width="50dp"
                              android:layout_height="wrap_content"
                              android:layout_marginEnd="10dp"
                              android:layout_toRightOf="@+id/varification5"
                              android:textColor="@color/black"
                              android:ems="10"
                              android:gravity="center"
                              android:inputType="phone"
                              android:textSize="20sp" />

                          <LinearLayout
                              android:id="@+id/rese"
                              android:layout_marginTop="100dp"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_centerInParent="true"
                              android:orientation="horizontal"
                              android:layout_below="@+id/varification6">
                              <TextView
                                  android:id="@+id/getotp"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/resend"/>
                              <TextView
                                  android:id="@+id/resendButton"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/resendBt"
                                  android:textColor="#FA8072"
                                  android:textStyle="bold"
                                  android:clickable="true"
                                  android:focusable="true"
                                  android:layout_marginLeft="5dp"
                                  android:background="?android:attr/selectableItemBackground"/>

                          </LinearLayout>
                          <RelativeLayout
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_centerInParent="true">

                              <com.github.ybq.android.spinkit.SpinKitView
                                  xmlns:app="http://schemas.android.com/apk/res-auto"
                                  android:id="@+id/spin_kit"
                                  style="@style/SpinKitView.Large.Circle"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_gravity="center"
                                  android:layout_centerInParent="true"
                                  app:SpinKit_Color="#2ab7ca"
                                  android:visibility="gone"/>

                          </RelativeLayout>

                      </RelativeLayout>

                      <RelativeLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="50dp"
                          android:padding="30dp">

                          <Button
                              android:id="@+id/buttonVerify"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_marginTop="90dp"
                              android:background="@drawable/button_drawable"
                              android:textColor="@color/white"
                              android:text="@string/varify"/>

                      </RelativeLayout>

                  </RelativeLayout>
                  <TextView
                      android:id="@+id/timer"
                      android:layout_gravity="center"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@+id/verifyCont"
                      android:text="@string/otp"
                      android:textColor="@color/black"
                      android:layout_centerInParent="true"/>
              </LinearLayout>
       </androidx.cardview.widget.CardView>



</LinearLayout>